fix the overflow issue

--- a/style.css
+++ b/style.css
@@ -10,12 +10,11 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding: 0;
     margin: 0;
-    width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
+    overflow: auto;
     display: flex;
     flex-direction: column;
     background: linear-gradient(to left, #2c084c 0%, var(--spotify-black) 100%);
-    overflow: scroll;
 }
 
 .header {
@@ -77,11 +76,9 @@ body {
 }
 
 .container {
-    width: 100vw;
     display: grid;
-    grid-template-columns: repeat(3, minmax(300px, 1fr));
-    gap: 40px;
-    /* margin: 15px; */
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
     padding: 2em 10em;
 }
 
@@ -103,6 +100,7 @@ img {
     font-weight: bold;
     border-radius: 5px;
     padding: 0.5em 2em;
+    padding-left: 0;
     background: none;
     color: var(--spotify-white);
     align-self: center;
